[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/NetworkSetup.gd" type="Script" id=1]
[ext_resource path="res://scripts/Game.gd" type="Script" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="NetworkSetup" type="Control" parent="."]
margin_right = 1022.0
margin_bottom = 601.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkSetup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -78.0
margin_right = 221.0
margin_bottom = 72.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip_address" type="LineEdit" parent="NetworkSetup/VBoxContainer"]
margin_right = 438.0
margin_bottom = 24.0
align = 1
placeholder_text = "IP Address"

[node name="Host_button" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 28.0
margin_right = 438.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 60 )
text = "Host"

[node name="Join_button" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 92.0
margin_right = 438.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 60 )
text = "Join"

[connection signal="text_changed" from="NetworkSetup/VBoxContainer/ip_address" to="NetworkSetup" method="_on_ip_address_text_changed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Host_button" to="NetworkSetup" method="_on_Host_button_pressed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Join_button" to="NetworkSetup" method="_on_Join_button_pressed"]
